# Auralia

./: IMAGE_ANALYSIS_SETUP.md  OLLAMA_SERVER_SETUP.md  OLLAMA_SETUP.md  README (2).md  README.md  SPEECH_TO_TEXT_SETUP.md  STREAMING_SETUP.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hey-gemma_en_android_v3_0_0.ppn  hi-Aura_en_android_v3_0_0.ppn
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/androidcourse/: MainActivity.kt
app/src/main/java/com/voiceassistant/: MainActivity.kt
app/src/main/java/com/voiceassistant/accessibility/: VoiceAssistantAccessibilityService.kt
app/src/main/java/com/voiceassistant/agent/: VoiceAgent.kt
app/src/main/java/com/voiceassistant/ai/: AIAssistantManager.kt  AICommandInterpreter.kt  TaskContinuationManager.kt
app/src/main/java/com/voiceassistant/commands/: CommandProcessor.kt
app/src/main/java/com/voiceassistant/config/: NetworkConfig.kt
app/src/main/java/com/voiceassistant/model/: Action.kt  ActionData.kt  ChatMessage.kt  LlamaNative.kt  LlamaRequest.kt  LlamaResponse.kt  OllamaRequest.kt  OllamaResponse.kt
app/src/main/java/com/voiceassistant/network/: LlamaApi.kt  OllamaApiClient.kt  OllamaApiService.kt
app/src/main/java/com/voiceassistant/repository/: LlamaRepository.kt
app/src/main/java/com/voiceassistant/ui/theme/: Type.kt  (+1 more)
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
